--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
+    "eslint": "^9.23.0",
+    "globals": "^16.0.0",
     "prettier": "^3.5.3"
   }
 }
