--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@eslint/js": "^9.23.0",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
     "prettier": "^3.5.3"
   }
 }
